--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,16 @@
 #c{
   display: none;
 }
-/* #output{
-  display: none;
-} */
+h3{
+  font-weight: bold;
+}
+h5{
+  text-decoration: underline;
+}
+.container{
+  background-color: lightsteelblue;
+  }
+  .header, .jumbotron{
+    text-align: center;
+  }
+  
